# Carving-for-3D-model

./: CMakeLists.txt  README.md
include/: Camera.h  DrawModel.h  MarchingCubeTables.h  MatrixStack.h  Object.h  ReadVoxelModel.h  SOM.h  Vertex.h  background.h  carving.h  gui.h  model.h  texture.h  twoStepMapping.h
raw/input/: ball21_df.raw  ball67_df.raw  bunny_dist.inf  donut_df.raw  donut_dist.inf
raw/output/: ball21.raw
shader/: depthdebug.vs  rayShader.fs  rayShader.vs  shader.fs  shader.vs
src/: DrawModel.cpp  Iso-surface.cpp  MatrixStack.cpp  ReadVoxelModel.cpp  SOM.cpp  background.cpp  carving.cpp  gui.cpp  main.cpp  model.cpp  texture.cpp  twoStepMapping.cpp
